# prompt-protocol-specification

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md  RELEASE_NOTES_TEMPLATE_v1.0.0.md  STATUS.md  package-lock.json  package.json
.github/workflows/: conformance.yml
dataset/: README.es.md  README.ja.md  README.ko.md  README.md  README.zh.md
dataset/statistics/: summary.json
schema/: pps-1.0.schema.json  pps.schema.json
sdk/: README.md
sdk/js/: index.js  package-lock.json  package.json  test.js
sdk/python/: pyproject.toml  test_pps.py
sdk/python/pps/: __init__.py  _autofix.py  _canonical.py  _policy.py  _schema.py  _validate.py
spec/PPS-1.0/: IP_NOTICE.md  LICENSE-docs  README.md  benchmark.en.md  benchmark.es.md  benchmark.ja.md  benchmark.ko.md  benchmark.md  best-practices.en.md  best-practices.es.md  best-practices.ja.md  best-practices.ko.md  best-practices.md  conformance.en.md  conformance.es.md  conformance.ja.md  conformance.ko.md  conformance.md  registry.en.md  registry.es.md  registry.ja.md  registry.ko.md  registry.md  security-privacy.en.md  security-privacy.es.md  security-privacy.ja.md  security-privacy.ko.md  security-privacy.md  standard.en.md  standard.es.md  standard.ja.md  standard.ko.md  standard.md  versioning.en.md  versioning.es.md  versioning.ja.md  versioning.ko.md  versioning.md
spec/examples/: README.md  adversarial.json  budget_violation.json  citation_required.json  classification.json  gdpr_missing_no_pii.json  minimal.after.json  (+8 more)
tools/: pps-verify.js
(+526 files in other folders)
